--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "child_process": "^1.0.2",
     "fs": "^0.0.1-security",
-    "archiver": "^5.3.0"
+    "archiver": "^5.3.0",
+    "node-cron": "^3.0.2"
   }
 }
